# meeting

./: README.md
meeting-client/: meetingClient.sln
meeting-client/meetingClient/: ChatMessage.cpp  ChatMessage.h  DequeBuffer.h  MyTcpSocket.cpp  MyTcpSocket.h  meetingClient.cpp  meetingClient.h  meetingClient.qrc  meetingClient.ui  meetingClient.vcxproj  meetingClient.vcxproj.filters
meeting-client2/: .gitignore  README.md
meeting-client2/meetingClient/: DequeBuffer.cpp  Msg.h  MyVideoSurface.cpp  MyVideoSurface.h  RingBuffer.cpp  RingBuffer.h  main.cpp  meetingClient2.ui
meeting-server/: .gitignore  CMakeLists.txt  README.md  makefile
meeting-server/include/: deque_buffer.h  event_handler.h  msg.h  reactor.h  ring_buffer.h  room.h  server.h  thread_pool.h  user.h
meeting-server/src/: deque_buffer.cpp  event_handler.cpp  main.cpp  reactor.cpp  ring_buffer.cpp  room.cpp  server.cpp  thread_pool.cpp  user.cpp
